loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: not found: value Direction
setDirection(dir:Direction.EAST) 
                 ^LoopCourseForest:1: error: not found: value dir
setDirection(dir:Direction.EAST) 
             ^